--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "sb:test": "nx test-storybook",
+    "sb": "nx storybook"
   },
   "private": true,
   "dependencies": {
@@ -19,11 +21,19 @@
     "@nx/eslint": "17.2.8",
     "@nx/eslint-plugin": "17.2.8",
     "@nx/js": "17.2.8",
-    "@nx/playwright": "17.2.8",
+    "@nx/playwright": "^17.2.8",
     "@nx/react": "17.2.8",
+    "@nx/storybook": "^17.2.8",
     "@nx/vite": "17.2.8",
     "@nx/workspace": "17.2.8",
     "@playwright/test": "^1.36.0",
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/core-server": "^7.5.3",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/react-vite": "^7.5.3",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
@@ -34,8 +44,8 @@
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "@vitejs/plugin-react": "^4.2.0",
-    "@vitest/coverage-v8": "~0.34.6",
-    "@vitest/ui": "~0.34.6",
+    "@vitest/coverage-v8": "^1.1.3",
+    "@vitest/ui": "^1.1.3",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.27.5",
@@ -47,8 +57,9 @@
     "nx": "17.2.8",
     "prettier": "^2.6.2",
     "sass": "^1.55.0",
+    "ts-node": "10.9.1",
     "typescript": "~5.2.2",
     "vite": "^5.0.0",
-    "vitest": "~0.34.6"
+    "vitest": "^1.1.3"
   }
 }
