--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
     "typescript": "~5.2.2",
     "vite": "^5.0.0",
     "vitest": "^1.1.3"
+  },
+  "peerDependencies": {
+    "usehooks-ts": "^2.9.2"
   }
 }
